tests/snapshots/wallets/address_info/exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - address-info
    - wallet
    - 1F8hPMrEHKhKqpScWJjeJGiQSaBJE6VnqEBAHb5rVFfoP
---
success: true
exit_code: 0
----- stdout -----
{
  "address": "1F8hPMrEHKhKqpScWJjeJGiQSaBJE6VnqEBAHb5rVFfoP",
  "group": 2,
  "path": "m/44'/1234'/0'/0/0",
  "publicKey": "038a6fed523a2c907cfb3ed08a8ddb0ed1ae081f8169f0683709892c47f9a70f16"
}

----- stderr -----
