tests/snapshots/wallets/address_info/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - address-info
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <ADDRESS>

Usage: kermit wallets address-info <WALLET_NAME> <ADDRESS>

For more information, try '--help'.
