tests/snapshots/wallets/address_info/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - address-info
    - foo
    - 15EvQxuTu5qdgEfPY9555FKv6Ev4cRLxwEJfbm4pcoEm9
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
